clusters/platform/wave-4-edge/traefik/templates/infisical-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infisical
  namespace: infisical
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`infisical.infra.the-lab.zone`)
      kind: Rule
      services:
        - name: infisical-infisical-standalone-infisical
          port: 8080
  tls:
    secretName: infra-wildcard-tls
