clusters/platform/wave-4-edge/traefik/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.platform.the-lab.zone`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: platform-wildcard-tls
